feat: sync runs instead of pipelines for now
And downgrade prettier again as 3.3.3 causes crash
